--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,12 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/inbound-messages/inbound-messages-dialog.controller.js"></script>
+    <script src="app/entities/inbound-messages/inbound-messages-detail.controller.js"></script>
+    <script src="app/entities/inbound-messages/inbound-messages-delete-dialog.controller.js"></script>
+    <script src="app/entities/inbound-messages/inbound-messages.state.js"></script>
+    <script src="app/entities/inbound-messages/inbound-messages.service.js"></script>
+    <script src="app/entities/inbound-messages/inbound-messages.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
