--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,18 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/keycloak-users/keycloak-users-dialog.controller.js"></script>
+    <script src="app/entities/keycloak-users/keycloak-users-detail.controller.js"></script>
+    <script src="app/entities/keycloak-users/keycloak-users-delete-dialog.controller.js"></script>
+    <script src="app/entities/keycloak-users/keycloak-users.state.js"></script>
+    <script src="app/entities/keycloak-users/keycloak-users.service.js"></script>
+    <script src="app/entities/keycloak-users/keycloak-users.controller.js"></script>
+    <script src="app/entities/keycloak-user/keycloak-user-dialog.controller.js"></script>
+    <script src="app/entities/keycloak-user/keycloak-user-detail.controller.js"></script>
+    <script src="app/entities/keycloak-user/keycloak-user-delete-dialog.controller.js"></script>
+    <script src="app/entities/keycloak-user/keycloak-user.state.js"></script>
+    <script src="app/entities/keycloak-user/keycloak-user.service.js"></script>
+    <script src="app/entities/keycloak-user/keycloak-user.controller.js"></script>
     <script src="app/entities/inbound-messages/inbound-messages-dialog.controller.js"></script>
     <script src="app/entities/inbound-messages/inbound-messages-detail.controller.js"></script>
     <script src="app/entities/inbound-messages/inbound-messages-delete-dialog.controller.js"></script>
@@ -94,6 +106,12 @@
     <script src="app/entities/inbound-messages/inbound-messages.service.js"></script>
     <script src="app/entities/inbound-messages/inbound-messages.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/clients/clients-dialog.controller.js"></script>
+    <script src="app/entities/clients/clients-detail.controller.js"></script>
+    <script src="app/entities/clients/clients-delete-dialog.controller.js"></script>
+    <script src="app/entities/clients/clients.state.js"></script>
+    <script src="app/entities/clients/clients.service.js"></script>
+    <script src="app/entities/clients/clients.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
