tested with multiple clients

--- a/src/main/webapp/app/entities/clients/clients-detail.html
+++ b/src/main/webapp/app/entities/clients/clients-detail.html
@@ -14,7 +14,7 @@
         </dd>
         <dt><span translate="msgApp.clients.consumer_count">Consumer Count</span></dt>
         <dd>
-            <span>{{vm.clients.consumer_count}}</span>
+            <span>{{vm.clients.consumerCount}}</span>
         </dd>
         <dt><span translate="msgApp.clients.target_endpoint">Target Endpoint</span></dt>
         <dd>
