--- a/src/main/webapp/app/entities/clients/clients-dialog.html
+++ b/src/main/webapp/app/entities/clients/clients-dialog.html
@@ -27,8 +27,8 @@
         </div>
         <div class="form-group">
             <label class="control-label" translate="msgApp.clients.consumer_count" for="field_consumer_count">Consumer Count</label>
-            <input type="number" class="form-control" name="consumer_count" id="field_consumer_count"
-                    ng-model="vm.clients.consumer_count"
+            <input type="number" class="form-control" name="consumerCount" id="field_consumer_count"
+                    ng-model="vm.clients.consumerCount"
                      />
         </div>
         <div class="form-group">
