--- a/src/main/webapp/app/entities/clients/clients.html
+++ b/src/main/webapp/app/entities/clients/clients.html
@@ -33,7 +33,7 @@
                     <td><a ui-sref="clients-detail({id:clients.id})">{{clients.id}}</a></td>
                     <td>{{clients.name}}</td>
                     <td>{{clients.topic}}</td>
-                    <td>{{clients.consumer_count}}</td>
+                    <td>{{clients.consumerCount}}</td>
                     <td>{{clients.target_endpoint}}</td>
                     <td>{{clients.keycloak_user}}</td>
                     <td>
