--- a/src/main/webapp/app/entities/clients/clients-detail.html
+++ b/src/main/webapp/app/entities/clients/clients-detail.html
@@ -18,7 +18,7 @@
         </dd>
         <dt><span translate="msgApp.clients.target_endpoint">Target Endpoint</span></dt>
         <dd>
-            <span>{{vm.clients.target_endpoint}}</span>
+            <span>{{vm.clients.targetEndpoint}}</span>
         </dd>
         <dt><span translate="msgApp.clients.keycloak_user">Keycloak User</span></dt>
         <dd>
