--- a/src/main/webapp/app/entities/clients/clients-dialog.html
+++ b/src/main/webapp/app/entities/clients/clients-dialog.html
@@ -33,8 +33,8 @@
         </div>
         <div class="form-group">
             <label class="control-label" translate="msgApp.clients.target_endpoint" for="field_target_endpoint">Target Endpoint</label>
-            <input type="text" class="form-control" name="target_endpoint" id="field_target_endpoint"
-                    ng-model="vm.clients.target_endpoint"
+            <input type="text" class="form-control" name="targetEndpoint" id="field_target_endpoint"
+                    ng-model="vm.clients.targetEndpoint"
                      />
         </div>
         <div class="form-group">
