--- a/src/main/webapp/app/entities/clients/clients.html
+++ b/src/main/webapp/app/entities/clients/clients.html
@@ -34,7 +34,7 @@
                     <td>{{clients.name}}</td>
                     <td>{{clients.topic}}</td>
                     <td>{{clients.consumerCount}}</td>
-                    <td>{{clients.target_endpoint}}</td>
+                    <td>{{clients.targetEndpoint}}</td>
                     <td>{{clients.keycloak_user}}</td>
                     <td>
                         <a ui-sref="keycloak-user-detail({id:clients.keycloakUserMap.id})">{{clients.keycloakUserMap.id}}</a>
